# Home-Karaoke

./: .dockerignore  .gitignore  CLAUDE.md  README.md  app.py  audio_grading.py  docker-compose.yml  fallback_search.py  lyrica_client.py  lyrics_filter.py  requirements-ml.txt  requirements.txt  search.py  song_search.py  start.sh  waveform.py  worker.py
core/: artifacts.py  audio_grading.py  library.py  logging_config.py  midi.py  pipeline.py  qrcode_svg.py  rooms.py  tempo.py  vocal_transcribe.py
docker/: pipeline.Dockerfile  web.Dockerfile
lyrics/: lrclib_client.py  lyrica_client.py  lyrics_filter.py  lyrics_sources.py
scripts/: bootstrap_ml.py
search/: karaoke_search.py  song_search.py  song_selection.py
static/: grading-worklet.js  thumbnail-fallback.js
templates/: index.html  phone_home.html  phone_join.html  phone_now_singing.html  player.html  song_search.html  tv_lobby.html
tests/: test_app.py  test_artifacts.py  test_audio_grading.py  test_fallback_search.py  test_grade_websocket.py  test_library.py  test_library_routes.py  test_logging_config.py  test_lyrica_client.py  test_lyrics_filter.py  test_lyrics_sources.py  test_midi.py  test_phone_routes.py  test_pipeline.py  test_player_route.py  test_room_http_routes.py  test_room_suggestions_routes.py  test_room_websocket.py  test_rooms.py  test_select_song.py  test_song_search.py  test_song_search_routes.py  test_song_selection.py  test_song_suggestions_routes.py  (+5 more)
wasm/grading/: Cargo.toml  README.md
wasm/grading/cross_check/: cross_check_python.py  cross_check_wasm.js
wasm/grading/src/: lib.rs
(+29 files in other folders)
